단위 테스트 추가 & 프론트 리팩토링